--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-fontawesome": "^1.6.1",
     "react-scripts": "1.0.17",
     "request": "^2.83.0"
   },
@@ -19,7 +20,7 @@
     "eslint": "^4.9.0",
     "eslint-config-airbnb": "16.1.0",
     "eslint-plugin-import": "2.7.0",
-    "eslint-plugin-jsx-a11y": "6.0.2",
+    "eslint-plugin-jsx-a11y": "^5.0.0",
     "eslint-plugin-prettier": "^2.4.0",
     "eslint-plugin-react": "7.4.0"
   }
