--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "missanysse",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://erpero.github.io/missanysse",
   "dependencies": {
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
@@ -10,6 +11,8 @@
     "request": "^2.83.0"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
