--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "homepage": "https://erpero.github.io/missanysse",
   "dependencies": {
     "gh-pages": "^1.1.0",
+    "js-cookie": "^2.2.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-fontawesome": "^1.6.1",
@@ -26,6 +27,8 @@
     "eslint-plugin-import": "2.7.0",
     "eslint-plugin-jsx-a11y": "^5.0.0",
     "eslint-plugin-prettier": "^2.4.0",
-    "eslint-plugin-react": "7.4.0"
+    "eslint-plugin-react": "7.4.0",
+    "prettier": "^1.10.2",
+    "prettierrc": "^0.0.0-5"
   }
 }
